--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.1",
+    "@angular/cdk": "^13.1.1",
     "@angular/common": "^12.0.1",
     "@angular/compiler": "^12.0.1",
     "@angular/core": "^12.0.1",
@@ -23,6 +24,7 @@
     "codelyzer": "^6.0.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "primeng": "^13.0.3",
     "rxjs": "~6.6.7",
     "rxjs-tslint": "^0.1.8",
     "tslib": "^2.0.0",
